fixed layout issues

--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-@import url(fontawesome-all.min.css);
+
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,600,600italic");
 
 /*
@@ -1912,7 +1912,7 @@ input, select, textarea {
 		-ms-appearance: none;
 		appearance: none;
 		background: rgba(212, 212, 255, 0.035);
-		border: none;
+		border: 2px;
 		border-radius: 0;
 		color: inherit;
 		display: block;
