--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
     font-size: 16px;
     margin: 0;
     padding: 0;
+    background-color: whitesmoke;
     background-image: url("./public/img/city-bg.jpg");
     background-size: cover;
     background-repeat: no-repeat;
@@ -25,12 +26,17 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
     position: fixed;
     width: 100%;
     height: 10vh;
+    min-height: 60px;
     background-color: #474B55;
     border-bottom: solid red 2px;
     color: white;
     display: flex;
     justify-content: center;
+    align-items: center;
     z-index: 3;
+}
+.navbar h1 {
+    margin: 0;
 }
 .footer {
     width: 100%;
@@ -57,7 +63,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
 .main-container {
     display: flex;
     justify-content: space-around;
-    width: 90%;
+    width: 100%;
     max-width: 1170px;
     margin-top: 5px;
     padding: 5px;
@@ -87,7 +93,12 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
     background-color: rgba(71, 75, 85, 0.85);
 }
 
-@media screen and (max-width: 767px) {
+input[type="text"], textarea {
+    border-color: white;
+    border: 2px;
+}
+
+@media screen and (max-width: 1023px) {
     .main-container {
         display: block;
         width: 100%;
@@ -110,5 +121,10 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
         min-height: 0;
         margin-left: auto;
         margin-right: auto;
+    }
+}
+@media screen and (max-height: 600px){
+    .main-container{
+        padding-top: 60px;
     }
 }
